|Soujyo| Partial update of Bangla localization

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -14,18 +14,18 @@
 	"Know More": "আরও জানুন",
 	"We rely on your contributions": "আমরা আপনার অবদানের উপর নির্ভর করি",
 	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "স্পিচ রিকোগ্নেশন মডেলগুলি তৈরির মূল চাবিকাঠি, যা আপনি বিভিন্ন রাজ্য, উপভাষা, উচ্চারণ, লিঙ্গ এবং বয়সের অংশ জুড়ে অবদানের মাধ্যমে সরবরাহ করেন সেই ডেটার বৈচিত্র্যের মধ্যে রয়েছে। দেশজুড়ে এই বৈচিত্র্যের বিশালতা আমাদের ভাষাগুলি ক্ষমতায়নে সম্মিলিত শক্তি দেয়।",
-	"languages contributed": "ভাষা অবদান",
+	"languages contributed": "ভাষা অবদান সম্পূর্ণ হয়েছে",
 	"speakers contributed": "বক্তারা অবদান রেখেছিলেন",
-	"hours recorded": "ঘন্টা রেকর্ড",
+	"hours recorded": "ঘন্টা রেকর্ডিং হয়েছে",
 	"Top Languages": "শীর্ষ ভাষা",
 	"By hours of data contributed": "কয়েক ঘন্টা ডেটা অবদান",
 	"By number of speakers": "স্পিকার সংখ্যা দ্বারা",
 	"VIEW ALL DETAILS": "সমস্ত বিবরণ দেখুন",
 	"Speaker Details": "স্পিকারের বিবরণ",
 	"All the fields are optional": "সমস্ত ক্ষেত্র ঐচ্ছিক",
-	"Not You? Change User": "আপনি কি ? ব্যবহারকারী পরিবর্তন করুন",
+	"Not You? Change User": "আপনি নয়? ব্যবহারকারী পরিবর্তন করুন",
 	"Username": "ব্যবহারকারীর নাম",
-	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
+	"Please don't use email or mobile number as user name": "দয়া করে ইমেল বা মোবাইল নম্বর ব্যবহারকারীর নাম হিসাবে ব্যবহার করবেন না",
 	"Mother Tongue": "মাতৃভাষা",
 	"Select Mother Tongue": "মাতৃভাষা নির্বাচন করুন",
 	"Age Group": "বয়স গ্রুপ",
@@ -34,14 +34,14 @@
 	"Male": "পুরুষ",
 	"Female": "মহিলা",
 	"Others": "অন্যান্য",
-	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "<a href=\"/terms-and-conditions\"> আমি শর্তাদি এবং শর্তাদি পড়েছি এবং তাতে সম্মত হয়েছি </a>",
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "<a href=\"/terms-and-conditions\"> আমি শর্তাদি এবং শর্তগুলি পড়েছি এবং তাতে সম্মত হয়েছি</a>",
 	"LET'S GO": "চলো শুরু করি",
-	"Hide details": "Hide details",
+	"Hide details": "বিশদ আড়াল করুন",
 	"Select Your Preferred Language": "আপনার পছন্দের ভাষা নির্বাচন করুন",
-	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
+	"Select the language you wish to contribute/validate in:": "আপনি যে ভাষাটিতে অবদান/বৈধতা চান, তা নির্বাচন করুন:",
 	"Terms & Conditions": "শর্তাবলী",
 	"Privacy Policy": "গোপনীয়তা নীতি",
-	"-------- ABOUT US --------": "-------- ABOUT US -------",
+	"-------- ABOUT US --------": "-------- আমাদের সম্পর্কে -------",
 	"An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "একটি উন্মুক্ত তথ্য কৌশল বিভিন্ন ভাষা সম্প্রদায়, ব্যক্তি ও প্রযুক্তিবিদ, যারা তাদের ভাষা সম্পর্কে উৎসাহী,তারা স্পিচ রিকোগ্নেশন অ্যাপ্লিকেশনগুলি বিকাশ করতে এবং সম্প্রদায়ের কল্যাণের জন্য বিভিন্ন ক্ষেত্রে তাদের সংহত করতে সক্ষম করবে।",
 	"Our multilingual DNA is still a missing piece in digital first strategy": "আমাদের বহুভাষিক ডি এন এ এখনও ডিজিটাল প্রথম কৌশলটিতে একটি অনুপস্থিত অংশ",
 	"India being a vast multilingual country, 90% of India’s population relies on regional languages to conduct their educational, social & digital activities.": "ভারত একটি বিশাল বহুভাষিক দেশ হওয়ায় ভারতের জনসংখ্যার ৯০% তাদের শিক্ষাগত, সামাজিক ও ডিজিটাল কার্যক্রম পরিচালনার জন্য আঞ্চলিক ভাষার উপর নির্ভর করে।",
@@ -51,7 +51,7 @@
 	"Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.": "স্পিচ রিকোগ্নেশন এমন একটি প্রযুক্তি যা বক্তাকে বাস্তবিক পাঠ্যে রূপান্তর করে। ভারতীয় ভাষাগুলির জন্য এ জাতীয় মডেলটির বিভিন্ন ক্ষেত্রে যেমন শিক্ষা, স্বাস্থ্যসেবা এবং মিডিয়াগুলিতে ব্যবহার অপরিহর্য হয়ে যাওয়ার সম্ভাবনা রয়েছে।",
 	"The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.": "যে সরঞ্জামগুলি, ইউটিলিটিগুলি এবং মডেলগুলি উন্নত করার প্রস্তাব করা হয়েছে সেগুলি ভাক্যাংশ জনসমাগমের প্ল্যাটফর্মের মাধ্যমে মুক্ত উৎসের অবদানের উপর নির্ভর করবে।",
 	"Crowd Sourcing & your contribution": "জনসমাগম এবং আপনার অবদান:",
-	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.": "স্পিচ রিকোগ্নেশন \"মেশিন-লার্নিং\" প্রযুক্তির উপর নির্ভর করে যার মধ্যে রয়েছে বিবিধ ভারতীয় ভয়েস এবং সংশ্লিষ্ট পাঠ্যর অন্তর্ভুক্ত ডেটাসেটের বিশাল সংগ্রহ। ভাক্যাংশ এর মাধ্যমে একস্টেপ  ভারতীয় ভাষায় কথা বলার জন্য বিভিন্ন উন্মুক্ত উৎস ভান্ডার তৈরি করতে চায় যা অন্যদের ব্যবহার করার জন্য একটি কর্মোদ্যোগ।",
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.": "স্পিচ রিকোগ্নেশন \"মেশিন-লার্নিং\" প্রযুক্তির উপর নির্ভর করে যার মধ্যে রয়েছে বিবিধ ভারতীয় ভয়েস এবং সংশ্লিষ্ট পাঠ্যর অন্তর্ভুক্ত ডেটাসেটের বিশাল সংগ্রহ। 'ভাক্যাংশ' এর মাধ্যমে আমরা ভারতীয়  ভাষার একটি বিবিধ উন্মুক্ত ভাণ্ডার তৈরি করতে চাই যেটি এই উদ্যোগের জন্য ব্যবহার করা যেতে পারে|",
 	"This is where you come in.": "এখানেই আপনার আমন্ত্রণ",
 	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "আপনার অবদানের প্রতিটি মিনিট একটি বিশাল মতভেদ তৈরি করবে এবং আমাদের উদ্দেশ্যটি সফল করতে সাহায্য করবে।",
 	"Select language": "ভাষা চয়ন করুন",
@@ -62,7 +62,7 @@
 	"Let's get started!": "চলুন শুরু করি",
 	"SKIP": "এড়িয়ে যান",
 	"STOP RECORDING": "রেকর্ডিং বন্ধ করুন",
-	"Audio recording is too small. Please Re-record": "অডিও রেকর্ডিং খুব ছোট। পুনরায় রেকর্ড করুন",
+	"Audio recording is too small. Please Re-record": "অডিও রেকর্ডিং খুব ছোট। দয়া করে পুনরায় রেকর্ড করুন",
 	"RE-RECORD": "পুনরায় রেকর্ড করুন",
 	"NEXT": "পরবর্তী",
 	"away from reaching your goal!": "আপনার লক্ষ্যে পৌঁছানো থেকে বঞ্চিত!",
@@ -78,7 +78,7 @@
 	"Close": "বন্ধ করুন",
 	"Thank you for contributing!": "অবদানের জন্য ধন্যবাদ!",
 	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "আপনাদের এই অবদান আমাদের লক্ষ্যকে আরও <b><span id=\"user-contribution\">0 seconds</span></b> কাছাকাছি পৌঁছে দিয়েছে",
-	"Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.": "Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.",
+	"Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.": "ভ্যাক্যান্যাশ প্রায় একটি লক্ষ্য পূরণের জন্য কল্পনা করা হয়েছে-বৈচিত্র্যময় ভারতীয় কণ্ঠস্বর 10,000 ঘন্টা।",
 	"A contribution of 30-45 mins voice per speaker can make Vakyansh come closer to it’s vision.": "আপনার কণ্ঠের ৩০-৪৫ মিনিটের একটি অবদান ভাক্যাংশকে বৈচিত্র্যময় কণ্ঠের একটি উন্মুক্ত ডেটা ভাণ্ডার তৈরি করতে পারে।",
 	"We know you can do more!": "আমরা জানি আরও কিছু করতে পারেন!",
 	"Contribute More": "আরও অবদান রাখুন",
@@ -90,7 +90,7 @@
 	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "আমরা সম্প্রতি <span id=\"spn-validation-language\"></span> ভাষার জন্য ডেটা অবদানের যাত্রা শুরু করেছি এবং আশা করি খুব শীঘ্রই আপনার বৈধতার জন্য ভয়েস নমুনাগুলি সংগ্রহ করা হবে।",
 	"Would you also like to contribute your voice?": "আপনি কি নিজের কন্ঠে অবদান রাখতে চান?",
 	"Start Contributing": "অবদান শুরু করুন",
-	"Thank you for validating!": "বৈধ হওয়ার জন্য ধন্যবাদ!",
+	"Thank you for validating!": "যাচাই করার জন্য আপনাকে ধন্যবাদ!",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "আপনি <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span> টি নমুনার মধ্যে <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> টি ভয়েস নমুনাগুলি যাচাই করতে সহায়তা করেছেন",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "আপনি <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> টি ভয়েস নমুনাগুলি যাচাই করতে সহায়তা করেছেন",
 	"total hours validated": "মোট বৈধ",
@@ -105,25 +105,25 @@
 	"We do not have any data for": "আমাদের কাছে কোনও ডেটা নেই",
 	"would you like to contribute for it?": "আপনি কি এর জন্য অবদান রাখতে চান?",
 	"Contribute Now": "এখন অবদান",
-	"hours validated": "ঘন্টা বৈধ",
+	"hours validated": "ঘন্টা যাচাই করা হয়েছে",
 	"Progress Chart": "অগ্রগতির সময়রেখা",
 	"Monthly": "মাসিক",
 	"Quarterly": "ত্রৈমাসিক",
 	"Gender Contribution": "লিঙ্গ অবদান",
 	"State Wise distribution": "রাজ্য অনুসারে বিতরণ",
 	"Age Group Distribution": "বয়স গ্রুপ বিতরণ",
-	"We do not have any data for this language, would you like to contribute for it?": "এই ভাষার জন্য আমাদের কাছে কোনও ডেটা নেই, আপনি কি এর জন্য অবদান রাখতে চান?",
+	"We do not have any data for this language, would you like to contribute for it?": "এই ভাষাটির জন্য আমাদের কাছে কোনো তথ্য নেই, এর জন্য আপনি অবদান রাখতে চান?",
 	"EkStep Foundation": "একস্টেপ ফাউন্ডেশন",
 	"Username cannot be more than 12 characters": "ব্যবহারকারীর নাম 12 টির বেশি অক্ষর হতে পারে না",
-	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
-	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
-	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
+	"Ensure the voice is <b>clear and audible</b>": "ভয়েসটি <b>পরিষ্কার এবং শ্রাব্য</b> তা নিশ্চিত করুন",
+	"Match the voice to the text <b>accurately</b>": "পাঠ্যের সাথে ভয়েসটি <b>নির্ভুলভাবে</b> মানান",
+	"If you are unsure of the match, skip the particular voice sample": "আপনি যদি ম্যাচের বিষয়ে অনিশ্চিত হন তবে সেই নির্দিষ্ট ভয়েসের নমুনাটি এড়িয়ে যান",
 	"hrs recorded in": "%language য় %hours ঘণ্টা রেকডিং হয়েছে",
 	"hrs validated in": "%hours ঘন্টা %language য়  বৈধ হয়েছে",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "রেকর্ডিং স্বয়ংক্রিয়ভাবে <span id=\"counter\"></span> সেকেন্ড পরে বন্ধ হবে",
-	"Incorrect": "ভুল",
+	"Incorrect": "ত্রুটিপূর্ণ",
 	"Replay": "পুনরায় শুরু করুন",
-	"Pause": "বিরতি দিন",
+	"Pause": "থামুন",
 	"Correct": "সঠিক",
 	"Skip": "এড়িয়ে যান",
 	"hours": "ঘন্টা",
@@ -133,7 +133,13 @@
 	"Page Not Found": "পৃষ্ঠা খুঁজে পাওয়া যায়নি",
 	"Looks like you have taken a wrong turn here": "দেখে মনে হচ্ছে আপনি এখানে কোনও ভুল অভিমুখ নিয়েছেন",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "হোম পৃষ্ঠায় ফিরে যেতে এখানে <a class=\"\" href=\"/\">ক্লিক করুন</a>",
-	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice",
+	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "আপনি আপনার ভয়েসের <b><span id=\"user-contribution\"></span></b><b><span> রেকর্ডিং</span></b> অবদান রেখেছেন",
 	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative": "স্পিচ রিকোগ্নেশন \" মেশিন-লার্নিং \" প্রযুক্তি এর উপর নির্ভর করে যা বিভিন্ন ভারতীয় কণ্ঠস্বর এবং সংশ্লিষ্ট পাঠ্যকে অন্তর্ভুক্ত করে ডায়েটসের বিশাল সংগ্রহ প্রয়োজন। 'ভাক্যাংশ' এর মাধ্যমে আমরা ভারতীয়  ভাষার একটি বিবিধ উন্মুক্ত ভাণ্ডার তৈরি করতে চাই যেটি এই উদ্যোগের জন্য ব্যবহার করা যেতে পারে",
-	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "একটি দল হিসাবে, আমরা আপনাকে আমাদের সাথে যোগ দিতে এবং এই উদ্যোগটিতে আপনার কণ্ঠস্বর রাখার জন্য আমন্ত্রণ জানাচ্ছি। এই প্রান্তে আপনার ভয়েস রেকর্ডিং অপ্রতিরোধ্য হতে পারে এবং তাই আপনি আমাদের\n সাথে একাধিকবার দেখা করতে পারেন এবং আপনি যেখানে শেষ করেছিলেন সেখান থেকে শুরু করার জন্য আমরা আমাদের ওয়েবসাইটের ব্যবস্থা তৈরি করেছি।"
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "একটি দল হিসাবে, আমরা আপনাকে আমাদের সাথে যোগ দিতে এবং এই উদ্যোগটিতে আপনার কণ্ঠস্বর রাখার জন্য আমন্ত্রণ জানাচ্ছি। এই প্রান্তে আপনার ভয়েস রেকর্ডিং অপ্রতিরোধ্য হতে পারে এবং তাই আপনি আমাদের\n সাথে একাধিকবার দেখা করতে পারেন এবং আপনি যেখানে শেষ করেছিলেন সেখান থেকে শুরু করার জন্য আমরা আমাদের ওয়েবসাইটের ব্যবস্থা তৈরি করেছি।",
+	"Feedback": "মতামত",
+	"<b>Read once</b> before recording it": "এটি রেকর্ড করার আগে <b>একবার পড়ুন</b>",
+	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "আপনাকে ধন্যবাদ <span id=\"spn-validation-count\" class=\"font-wt-900\"></span>টি রেকর্ডিং যাচাই করার জন্য ",
+	"Terms and Conditions": "শর্তাবলী",
+	"Terms of Use": "ব্যবহারের শর্তাবলী",
+	"Copyright & Licensing Notice": "কপিরাইট এবং লাইসেন্স বিজ্ঞপ্তি"
 }
