|Ramu| Change gender options in speaker details

--- a/locales/en.json
+++ b/locales/en.json
@@ -175,5 +175,17 @@
 	"<b>Read once</b> before recording it": "<b>Read once</b> before recording it",
 	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative": "Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative",
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
-	"Feedback": "Feedback"
+	"Feedback": "Feedback",
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
+	"Transgender - He": "Transgender - He",
+	"Transgender - She": "Transgender - She",
+	"Rather Not Say": "Rather Not Say",
+	"You are a champion": "You are a champion",
+	"WooHoo!! You took the first important step": "WooHoo!! You took the first important step",
+	"recordings contributed": "recordings contributed",
+	"You are just 10 sentences away from earning your 1st Badge.": "You are just 10 sentences away from earning your 1st Badge.",
+	"Did you know?": "Did you know?",
+	"Most data recorded for": "Most data recorded for",
+	"Data recorded for": "Data recorded for",
+	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!"
 }
