|Sreejith + Priyanshu| Added translation keys for latest terms and conditions text

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -211,5 +211,6 @@
 	"Test Mic":"মাইক পরীক্ষা করুন",
 	"Test Speaker":"স্পিকার পরীক্ষা করুন",
 	"Recording":"রেকর্ডিং",
-	"Playing":"শুরু হয়েছে"
+	"Playing":"শুরু হয়েছে",
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>"
 }
