--- a/locales/en.json
+++ b/locales/en.json
@@ -187,5 +187,8 @@
 	"Did you know?": "Did you know?",
 	"Most data recorded for": "Most data recorded for",
 	"Data recorded for": "Data recorded for",
-	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!"
+	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!",
+	"Test your Microphone and Speakers": "Test your Microphone and Speakers",
+	"Test mic": "Test mic",
+	"Test Speakers": "Test Speakers"
 }
