--- a/locales/or.json
+++ b/locales/or.json
@@ -158,5 +158,6 @@
 	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "ଏକ ଟିମ ଭାବରେ, ଆମେ ଆପଣଙ୍କୁ ଆମ ସହିତ ଯୋଗଦେବାକୁ ଏବଂ ଏହି ପଦକ୍ଷେପରେ ଆପଣଙ୍କର ସ୍ୱର ପ୍ରଦାନ କରିବାକୁ ଆମନ୍ତ୍ରଣ କରୁଛୁ। ଗୋଟିଏ ଥରରେ ଆପଣଙ୍କର ସ୍ବର ରେକର୍ଡିଂ କରିବା ହୁଏତ କଷ୍ଟକର ହୋଇପାରେ  ତେଣୁ, ଆମେ ଆମ ୱେବସାଇଟରେ ଶିକ୍ଷାଗ୍ରହଣକାରୀ ପଦକ୍ଷେପ ସୃଷ୍ଟି କରିଛୁ, ଯଦ୍ବାରା ଆପଣ ଆମକୁ ଏକାଧିକ ଥର ପରିଦର୍ଶନ କରିପାରିବେ ଏବଂ ଯେଉଁଠାରୁ ଛାଡ଼ିଥିଲେ ସେହି ସ୍ଥାନରୁ ପୁଣି ଥରେ ଆରମ୍ଭ କରିପାରିବେ। ",
 	"<b>Read once</b> before recording it": "ଏହାକୁ ରେକର୍ଡ଼ କରିବା ପୂର୍ବରୁ ଥରେ ପଢ଼ି ନିଅନ୍ତୁ",
 	"Feedback": "Feedback",
-	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ରେକର୍ଡ଼ିଂକୁ ଭାଲିଡେଟ୍ କରିଥିବାରୁ ଆପଣଙ୍କୁ ଧନ୍ୟବାଦ"
+	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ରେକର୍ଡ଼ିଂକୁ ଭାଲିଡେଟ୍ କରିଥିବାରୁ ଆପଣଙ୍କୁ ଧନ୍ୟବାଦ",
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>"
 }
