--- a/locales/te.json
+++ b/locales/te.json
@@ -128,5 +128,6 @@
 	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "ఒక బృందంగా, మాలో మీరు చేరాలి అనుకుంటున్నాం మరియు మీ గొంతును   మాకు ఇవ్వాలని కోరుకుంటున్నాము.  మీ గొంతును ఒక్కసారిగా రికార్డ్ చేయడం మీకు కష్టం గా ఉండొచ్చు అందుకు, మీరు మా వెబ్సైట్ ను పలుమార్లు దర్శించి మీరు వదిలేసిన దగ్గర నుంచి కొనసాగించే లా మేము జాగ్రత్తలు తీసుకున్నాము.",
 	"<b>Read once</b> before recording it": "రికార్డ్ చేసేముందు ఒకసారి చదవండి",
 	"Feedback": "Feedback",
-	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> రికార్డింగ్లను చెల్లుబాటు చేసినందుకు ధన్యవాదాలు"
+	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> రికార్డింగ్లను చెల్లుబాటు చేసినందుకు ధన్యవాదాలు",
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>"
 }
