--- a/locales/kd.json
+++ b/locales/kd.json
@@ -116,5 +116,5 @@
 	"Share it with your friends and family": "तुमचे इश्ट आणी परिवारांक कळीत करात",
 	"hrs recorded in": "%hours hrs recorded in %language",
 	"hrs validated in": "%hours hrs validated in %language",
-	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off": ""
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>"
 }
